--- a/Dcase2017_task2_tech_report.tex
+++ b/Dcase2017_task2_tech_report.tex
@@ -21,18 +21,18 @@
 
 % Authors in two lines, use in case of many authors with many affiliations (uncomment and modify).
 % --------------------
- \name{Fabio Vesperini$^{1}$,
-       Diego Droghini$^{1}$,
-       Daniele Ferretti$^{1}$
+ \name{Fabio Vesperin,
+       Diego Droghini,
+       Daniele Ferretti,
        }
  \secondlinename{	
- 	   Emanuele Principi$^{1}$,  
-       Leonardo Gabrielli$^{1}$,
-       Stefano Squartini$^{1}$, 
-       Francesco Piazza$^{1}$
+ 	   Emanuele Principi,  
+       Leonardo Gabrielli,
+       Stefano Squartini, 
+       Francesco Piazza
        }
        % fixed *.sty to allow names on multiple lines
- \address{$^1$ Universit\`{a} Politecnica delle Marche, Information Engineering  Dept., Ancona, Italy,\\ \{d.droghini, v.vesperini, d.ferretti\}@pm.univpm.it\\   
+ \address{Department of Information Engineering, Universit\`{a} Politecnica delle Marche, Ancona, Italy,\\ \{d.droghini, f.vesperini, d.ferretti\}@pm.univpm.it\\   
  		\{e.principi, l.gabrielli, s.squartini, f.piazza\}@univpm.it\\       
 }
   
@@ -94,9 +94,18 @@ The network is designed to consider a temporal context, thus the current feature
 with $c = 1, \dots, C$. Weights training is accomplished by the AdaDelta stochastic gradient-based optimisation algorithm \cite{zeiler2012adadelta}, which is an extension of the Adagrad \cite{duchi2011adaptive} algorithm. It was chosen because it is well-suited for dealing with sparse data and its robustness to different choices of model hyperparameters. Furthermore no manual tuning of learning rate is required. In addition, the dropout technique was employed during the neural network training to prevent overfitting and increase the generalisation performance of the neural network in frame classification \cite{srivastava2014dropout}. 
 
 \subsubsection{Post Processig}
-As network output signal we consider the output of the neuron corresponding to the event class. It is convolved with an exponential decay window of length $w$, then it is processed with a sliding median filter with kernel size $k$ and finally a threshold $\theta$ is applied.
+As network output signal $\mathbf{u}[t]$ we consider the output of the neuron corresponding to the event class. It is convolved with an exponential decay window of length $M$ defined as:
+\begin{equation}
+\mathbf{w}[t]= e^{\frac{−t}{\tau}} \quad \text{with}  \, \tau =  \frac{-(M-1)}{log_e(0.01)}
+\end{equation}
+		
+\begin{equation}
+\tilde{ \mathbf{u}}[t] = \mathbf{u}[t] \ast \mathbf{w}[t]
+\end{equation}
+then it is processed with a sliding median filter with a local window-size $k$ and finally a threshold $\theta$ is applied.
 
 \subsection{Convolutional Neural Network}
+\label{ssec:CNN}
 %lavora su base chunk 20 frame: organizzazione input (chunk da 20 non overlappati) e label 
 %descrizione di come lavorano i kernel per efatizzare la multiresolution approach
 %cleassificazione chunk ovellappati (chunk size -1 )
@@ -105,6 +114,16 @@ CNN is a feed-forward neural network \cite{Yann-cnn-1998} usually composed of th
 The aim of the CNN is to discriminate the event, selected from the previous network, from the background. The network is trained as a two-class classifier on non-overlapped audio chunk of logmel frames with resulting 2D input dimension of $40\times20$. In the case of audio task, CNN usually exploits the temporal evolution of the signal \cite{thomas2014analyzing} due of its nature. 
 The frame chunk size was selected equal to 20, which corresponds to 0.4 seconds of audio, reflecting the half of the minimum length of the occurring events.
 In the classification phase the audio event are evaluated based on frame chunk $40\times20$ with an overlap of 95\% (1 frame shift). This leads to an analysis of the audio event at different time and frequency resolution with respect to previous stage. 
+
+To compose the dataset for training and evaluation of the CNN we proceeded as follows: the samples of the event class were selected between the audio sections labelled as ``baby cry'', ``glass break'' and ``gun shot'' from the mixtures of the DCASE 2017 development dataset, in addition with the isolated events source signals. To obtain the background samples, we processed the sequences containing only background included in the DCASE 2017 development dataset with the first stage of the our algorithm. Thus, the frames detected as event in this case represent the ``false positive'' or ``insertions'' of the first stage. We used those frames as background samples in the CNN training phase to improve its refinement in the event detection process. Figure \ref{fig:CNN-train} shows the dataset composition for the training of the CNN-based event detector.
+
+\begin{figure}[b]
+	\centering
+	\includegraphics[width=\columnwidth]{Images/training_second_stage.pdf}
+	\caption{Training procedure of the CNN-based event detector.}
+	\label{fig:CNN-train}
+\end{figure}
+
 
 \subsubsection{Post Processig }
 %per ogni seq analizzo tutti gli eventi. Scarto quelli classificati con bck . Prendo il primo evento classificato come non bck perche lo scopo è beccare l onseth
@@ -149,16 +168,16 @@ The performance of the first event detection stage has been assessed by explorin
   \label{tbl:post-proc-params-mlp}
   \centering
   \footnotesize
-  \begin{tabular} {|c | c | c |}
+  \begin{tabular} {|l | c | c |}
     \hline
     Parameter     & Range  & Step\\  
     \hline
     \hline                                     
-    Threshold  & [0-0.7] & 0.01\\
+    Threshold $\theta$ & [0-0.7] & 0.01\\
     \hline                                     
-    Windows length & [10-90] & 10 \\
+    Window length $M$ & [10-90] & 10 \\
     \hline
-    Median Filter & [9-13] & 2\\
+    Median filter window $k$ & [9-13] & 2\\
     \hline                                       
   \end{tabular}
 \end{table}
@@ -188,11 +207,11 @@ The performance of the first event detection stage has been assessed by explorin
 
 Table \ref{tbl:hyper-params-mlp} shows the parameters explored in the random search, as well as the prior distribution and ranges. 
 %%
-The number of explored parameters sets depends on the wideness of the search space. In this work, we explored 200 sets of layout parameters for the MLP event detection. The neural networks were trained for 300 epochs on the categorical cross entropy loss function with the Adadelta gradient descent algorithm. The learning rate $lr=1.0$, as the parameters $\rho=0.95$, $\epsilon=10^{-6}$ were left to their default values as suggested in Keras documentation.
+The number of explored parameters sets depends on the wideness of the search space. In this work, we explored 200 sets of layout parameters for the MLP event detection. The neural networks were trained for 300 epochs on the categorical cross entropy loss function with the Adadelta gradient descent algorithm. The optimizer parameters were set as follows: learning rate $lr=1.0$, $\rho=0.95$, $\epsilon=10^{-6}$.
 A successive grid search was performed for each network configuration evaluated in the random seach, in order to find the post-processing parameters that yielded the minimum error rate. Investigated parameters in the grid search were: exponential window length $w$, median filter kernel $k$ and threshold $\theta$. The respective ranges are reported in Table \ref{tbl:post-proc-params-mlp}. The model with resulting minimum error rate was composed as follows: the input layer accepted 120 values for each frame index, corresponding to a context size $C=3$, the hidden layers were two dense layers respectively of size $[631,419]$, to whom the $ReLU$ activation function is applied and finally the output layer is made of two neurons with the softmax function.
 
 Because of the fast decay of the ``gun shot'' sound, we noticed that there was a small amount of audio frames containing this event with respect to the other sound event classes. For this reason we trained the MLP-based event detector obtained from the random seach with an extended dataset, including 500 newly generated mixtures containing the ``gun shot'' sound event.
-At the end of the validation stage of the system the neural network were trained including all the mixtures in the development dataset furnished with the DCASE 2017 challenge package and the aforementioned 500 newly generated containing the ``gun shot'' sound event for a total of 3487 audio sequences. Figure \ref{fig:MLP-train} shows the flow chart of the complete procedure for the MLP-based event detection stage configuration.
+At the end of the validation stage of the system the neural network was trained including all the mixtures in the development dataset included in the DCASE 2017 challenge package and the aforementioned 500 newly generated containing the ``gun shot'' sound event for a total of 3487 audio sequences. Figure \ref{fig:MLP-train} shows the flow chart of the complete procedure for the MLP-based event detection stage configuration.
 
 \begin{figure}[t]
 	\centering
@@ -210,16 +229,7 @@ At the end of the validation stage of the system the neural network were trained
 %Abbiamo effetuato una valutazione della cnn subase evento con la fmeasure.
 %Finally, sul validati
 
-To compose the dataset for training and evaluation of the CNN we proceeded as follows: the samples of the event class were selected between the audio sections labelled as ``baby cry'', ``glass break'' and ``gun shot'' from the mixtures of the DCASE 2017 development dataset, in addition with the isolated events source signals. To obtain the background samples, we processed the sequences containing only background furnished with the DCASE 2017 development dataset with the first stage of the our algorithm. Thus, the frames detected as event in this case represent the ``false positive'' or ``insertions'' of the first stage. We used those frames as background samples in the CNN training phase to improve its refinement in the event detection process. Figure \ref{fig:CNN-train} shows the dataset composition for the training of the CNN-based event detector.
-
-\begin{figure}[b]
-	\centering
-	\includegraphics[width=\columnwidth]{Images/training_second_stage.pdf}
-	\caption{Training procedure of the CNN-based event detector.}
-	\label{fig:CNN-train}
-\end{figure}
-
-To design the best CNN model for our purposes, we generated a shuffle stratified validation split from the dataset composed as described above. We left out the 10\% of the samples as validation set for the CNN model and we selected the layout parameters of the neural network based on the F-measure score obtained on this data sub-set. The best performing model was composed as follows: three convolutional kernel layers respectively with $[16, 8, 8]$ filters each of these of size equal to $3\times3$. Each convolutional layer was followed by a max pooling layer with kernels of size $2\times2$. A dense layer composed of 64 neurons with $tanh$ activation function is applyed before the network output layer. The model was trained for 40 epochs on the categorical cross entropy loss function with the Adadelta gradient descent algorithm with $lr=1.0$, $\rho=0.95$, $\epsilon=10^{-6}$ as for the MLPs.
+To design the best CNN model for our purposes, we generated a shuffle stratified validation split from the dataset composed as described in \ref{ssec:CNN}. We left out the 10\% of the samples as validation set for the CNN model and we selected the layout parameters of the neural network based on the F-measure score obtained on this data sub-set. The best performing model was composed as follows: three convolutional kernel layers respectively with $[16, 8, 8]$ filters each of these of size equal to $3\times3$. Each convolutional layer was followed by a max pooling layer with kernels of size $2\times2$. A dense layer composed of 64 neurons with $tanh$ activation function is applyed before the network output layer. The model was trained for 40 epochs on the categorical cross entropy loss function with the Adadelta gradient descent algorithm with $lr=1.0$, $\rho=0.95$, $\epsilon=10^{-6}$ as for the MLPs.
 
 
 \subsection{Evaluation Phase}
@@ -236,7 +246,7 @@ It is necessary to notice that in this challenge task the event target class (no
 The error rate based on the event detection of the first stage on the development dataset is equal to 0.23 and its respective F-measure is 88.0\%. 
 After the CNN-based refinement stage, the final overall error rate and F-measure are respectively equal to 0.18 and 90.9\%. 
 The post processing parameters used to select the MLP network with the lower ER and the value used in the final evaluation phase are the following:
-$\theta=0.20$, $w=70$, $k=11$. 
+$\theta=0.20$, $M=70$, $k=11$. 
 
 % \begin{table}[t]
 %  \caption{Final Scores. ER stays for only-onset error rate}
@@ -290,7 +300,7 @@ With respect to the DCASE 2017 baseline system the improvement in terms of error
 The parameters used for the different submitted systems for the task 2 of DCASE 2017 challenge are reported in table \ref{tbl:submitted-params}.
 
 \begin{table}[t]
-	\caption{Post processing parameters for submitted systems. Only the threshold is varied, $w = 70$ and $k=11$.}
+	\caption{Post processing parameters for submitted systems. Only the threshold is varied, $M = 70$ and $k=11$.}
 	\label{tbl:submitted-params}
 	\centering
 	\footnotesize
@@ -319,8 +329,7 @@ In our investigation we evaluated also a system applicable in a real word scenar
 
 \section{Conclusion and Outlook}
 \label{sec:conclusion}
-%TODO add results on evaluation dataset
- In this paper, a hierarchic multi-scaled neural network based approach for rare sound event detection is presented.  We extracted acoustic features from the audio signals, then the event detection is performed by an MLP-based stage and refined by a CNN-based decision stage, each with dedicated post processing procedures. To assess the performance of the algorithm we conducted experiments on the development dataset from the DCASE 2017 setup. According to the challenge specifications, the performance of the system are evaluated in terms of event-based error rate calculated using onset-only condition with a collar of 500 ms on the validation subset, achieving an error rate on the Development dataset equal to  0.23 with respect to an error rate equal to 0.53 of the baseline system. \textbf{ndFab: Add results on evaluation dataset.}
+ In this paper, a hierarchic multi-scaled neural network based approach for rare sound event detection is presented.  We extracted acoustic features from the audio signals, then the event detection is performed by an MLP-based stage and refined by a CNN-based decision stage, each with dedicated post processing procedures. To assess the performance of the algorithm we conducted experiments on the development dataset from the DCASE 2017 setup. According to the challenge specifications, the performance of the system are evaluated in terms of event-based error rate calculated using onset-only condition with a collar of 500 ms on the validation subset, achieving an error rate on the Development dataset equal to 0.23 with respect to an error rate equal to 0.53 of the baseline system. On the blind evaluation dataset, the best setup between 4 different threshold values achieves an error rate equal to 0.33 and an F-measure equal to 83.9\%.
  
 Future work will comprise the exploitation of event dedicated acoustic features, to better focus on the distinctive tracts given by the heterogeneous nature of the events. A deeper focus will be given also to the temporal evolution of the signal by means of recurrent structure, such as Long Short Term Memory (LSTM) Neural Networks \cite{hochreiter1997long}.
 %
